src/test/test-models/good/parser-generator/cholesky_cov_gqs_block.stan
generated quantities {
  cholesky_factor_cov[5,4] cfcov_54;
  cholesky_factor_cov[3] cfcov_33;
}
